# plus12monkeys

./: .gitignore  GAP_ANALYSIS.md  INTEGRATION_SUMMARY.md  NANDA_INTEGRATION.md  QUICK_REFERENCE.md  README.md  RESEARCH_FINDINGS.md  SPRINT_PLAN.md  _build.txt  _check1.txt  _deploys.txt  _git_helper.py  _git_output.txt  _patch_scamlikely.py  _railwaylogs.txt  _seed_and_test.py  _write_agent.py  _write_agent2.py  _write_agent3.py
backend/: pyproject.toml  railway.toml
backend/app/: main.py
backend/app/api/: agents.py  auth.py  billing.py  builds.py  generate.py  webhook.py  wizard.py
backend/app/core/: auth_middleware.py  config.py  database.py
backend/app/models/: auth.py  conversation.py  mcp.py  template.py
backend/app/services/: auth_service.py  claude_tools.py  code_generator.py  credential_store.py  mcp_registry.py  nanda_client.py  orchestrator.py  prompt_patterns.py  recommender.py  repo_analyzer.py  session_store.py  template_registry.py
backend/app/templates/: crewai_agent.py.j2  langgraph_agent.py.j2  mcp_config.json.j2  mcp_wrapper.py.j2  mcp_wrapper_readme.md.j2  mcp_wrapper_requirements.txt.j2  sdk_package_json.j2  sdk_readme.md.j2  sdk_setup_py.j2  sdk_wrapper.py.j2  sdk_wrapper.ts.j2
backend/tests/: test_claude_tools.py  test_code_generator.py  test_mcp_registry.py  test_template_registry.py
frontend/: 12landing.html  next.config.ts  package-lock.json  package.json  vercel.json
frontend/src/app/: error.tsx  globals.css  layout.tsx
frontend/src/app/auth/verify/: page.tsx
frontend/src/app/billing/cancel/: page.tsx
frontend/src/app/billing/success/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/app/wizard/: page.tsx
frontend/src/components/: AuthProvider.tsx  ChatWizard.tsx  LandingPage.tsx  MCPBrowser.tsx
frontend/src/lib/: api.ts  auth.ts
sdk/: README.md  pyproject.toml
sdk/plus12monkeys/: __init__.py  client.py  models.py
