[project]
name = "my-agent-too"
version = "0.1.0"
description = "Agent-as-a-Service Platform with MCP Integration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.79.0",
    "jinja2>=3.1.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

